--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.7.2",
-    "browser-sync": "^2.10.0",
-    "gulp": "gulpjs/gulp#4.0",
+    "browser-sync": "^2.24.5",
+    "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^3.1.0",
-    "gulp-babel": "^6.1.2",
-    "gulp-clean-css": "^3.3.1",
+    "gulp-babel": "^6.1.3",
+    "gulp-clean-css": "^3.9.4",
     "gulp-cli": "^1.2.1",
     "gulp-concat": "^2.5.2",
     "gulp-extname": "^0.2.0",
@@ -24,11 +24,11 @@
     "gulp-imagemin": "^2.2.1",
     "gulp-load-plugins": "^1.1.0",
     "gulp-sass": "^2.1.0",
-    "gulp-sourcemaps": "^1.6.0",
+    "gulp-sourcemaps": "^1.12.1",
     "gulp-uglify": "^1.2.0",
     "gulp-uncss": "^1.0.1",
-    "js-yaml": "^3.4.6",
-    "panini": "^1.3.0",
+    "js-yaml": "^3.12.0",
+    "panini": "^1.6.2",
     "rimraf": "^2.4.3",
     "style-sherpa": "^1.0.0",
     "yargs": "^3.8.0"
