--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.2.1",
     "gulp-load-plugins": "^1.1.0",
-    "gulp-sass": "^2.1.0",
+    "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^1.12.1",
     "gulp-uglify": "^1.2.0",
     "gulp-uncss": "^1.0.1",
@@ -47,7 +47,5 @@
     ]
   },
   "private": true,
-  "dependencies": {
-    "node-sass": "^4.9.1"
-  }
+  "dependencies": {}
 }
