move presentation pdf and update redirect

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [[redirects]]
-  from = "/automationgeneration/automationgeneration.pdf"
-  to = "/automationgeneration"
+  from = "/automationgeneration"
+  to = "/assets/automationgeneration.pdf"
   status = 200
   force = true
